QA Latest Data/main/default/objects/Trade_Ally_Type_Application_Stages_map__mdt/Trade_Ally_Type_Application_Stages_map__mdt.object-meta.xml
<CustomObject>
    <description>Maps trade ally types with the tabs available on the application page.</description>
    <label>Trade Ally Type – Application Stages map</label>
    <pluralLabel>Trade Ally Type – Application Stages map</pluralLabel>
</CustomObject>