QA Latest Data/main/default/objects/Trade_Ally_Type_Application_Stages_map__mdt/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>