QA Latest Data/main/default/objects/Trade_Ally_Type_Application_Stages_map__mdt/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certifications</label>
    <type>Checkbox</type>
</CustomField>