QA Latest Data/main/default/objects/Trade_Ally_Type_Application_Stages_map__mdt/fields/Insurance_Information__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Information</label>
    <type>Checkbox</type>
</CustomField>