QA Latest Data/main/default/objects/Trade_Ally_Type_Application_Stages_map__mdt/fields/License_Information__c.field-meta.xml
<CustomField>
    <fullName>License_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Information</label>
    <type>Checkbox</type>
</CustomField>