QA Latest Data/main/default/objects/Trade_Ally_Type_Application_Stages_map__mdt/fields/Other_Documents__c.field-meta.xml
<CustomField>
    <fullName>Other_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Documents</label>
    <type>Checkbox</type>
</CustomField>