QA Latest Data/main/default/objects/Trade_Ally_Type_Application_Stages_map__mdt/fields/Program_Participation__c.field-meta.xml
<CustomField>
    <fullName>Program_Participation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Participation</label>
    <type>Checkbox</type>
</CustomField>