QA Latest Data/main/default/objects/Trade_Ally_Type_Application_Stages_map__mdt/fields/Tax_Documents__c.field-meta.xml
<CustomField>
    <fullName>Tax_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Documents</label>
    <type>Checkbox</type>
</CustomField>